--- a/frontendProject/package.json
+++ b/frontendProject/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@paypal/paypal-js": "^8.1.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
